Modificação/poacity no script,html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>InstagramDevClub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -37,10 +37,10 @@
 
     setInterval( () => {
 
-        if (imagem.style.opacity == 0) {
-            imagem.style.opacity = 1
+        if (imagem.style.opacity == 0.0) {
+            imagem.style.opacity = 0.1
         } else {
-            imagem.style.opacity = 0
+            imagem.style.opacity = 0.0
         }
 
     }, 3000)
